made some changes to the index files

--- a/views/index1.html
+++ b/views/index1.html
@@ -4,6 +4,7 @@
     <title>Index1</title>
   </head>
   <body>
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
+    <p>Feeling hungry but wanna eat healthy, try some of this and it'll be sure to make you wealthy.</p>
+    <p>-Muellers</p>
   </body>
 </html>
