--- a/views/index2.html
+++ b/views/index2.html
@@ -4,6 +4,7 @@
     <title>Index2</title>
   </head>
   <body>
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
+    <p>If you have a dog and need some food, we'll be sure to set the mood.</p>
+    <p>-Puppy Cannon</p>
   </body>
 </html>
