--- a/views/index3.html
+++ b/views/index3.html
@@ -4,6 +4,7 @@
     <title>Index3</title>
   </head>
   <body>
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
+    <p>Kinda parched and in need of a drink, grab a bottle and it'll make you wink</p>
+    <p>-Coca Cola</p>
   </body>
 </html>
