added pictures to the html files

--- a/views/index1.html
+++ b/views/index1.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <html>
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/style1.css">
   <head>
     <title>Index1</title>
   </head>
   <body>
     <p>Feeling hungry but wanna eat healthy, try some of this and it'll be sure to make you wealthy.</p>
     <p>-Muellers</p>
+    <img src="pasta.jpeg">
   </body>
 </html>
