--- a/views/index3.html
+++ b/views/index3.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <html>
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/style3.css">
   <head>
     <title>Index3</title>
   </head>
   <body>
     <p>Kinda parched and in need of a drink, grab a bottle and it'll make you wink</p>
     <p>-Coca Cola</p>
+    <img src="css/coke.jpeg">
   </body>
 </html>
