--- a/views/index2.html
+++ b/views/index2.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <html>
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/style2.css">
   <head>
     <title>Index2</title>
   </head>
   <body>
     <p>If you have a dog and need some food, we'll be sure to set the mood.</p>
     <p>-Puppy Cannon</p>
+    <img src="css/puppy.jpeg">
   </body>
 </html>
