--- a/views/index1.html
+++ b/views/index1.html
@@ -7,6 +7,6 @@
   <body>
     <p>Feeling hungry but wanna eat healthy, try some of this and it'll be sure to make you wealthy.</p>
     <p>-Muellers</p>
-    <img src="pasta.jpeg">
+    <img src="css/pasta.jpeg">
   </body>
 </html>
