moved my images from the css folder to the images folder.

--- a/views/index2.html
+++ b/views/index2.html
@@ -7,6 +7,6 @@
   <body>
     <p>If you have a dog and need some food, we'll be sure to set the mood.</p>
     <p>-Puppy Cannon</p>
-    <img src="css/puppy.jpeg">
+    <img src="images/puppy.jpeg">
   </body>
 </html>
