--- a/views/index3.html
+++ b/views/index3.html
@@ -7,6 +7,6 @@
   <body>
     <p>Kinda parched and in need of a drink, grab a bottle and it'll make you wink</p>
     <p>-Coca Cola</p>
-    <img src="css/coke.jpeg">
+    <img src="images/coke.jpeg">
   </body>
 </html>
