updated files to make website responsive

--- a/views/index1.erb
+++ b/views/index1.erb
@@ -1,7 +1,5 @@
-<div class="row">
-  <div class="col-lg-2">
-		<p>Feeling hungry but wanna eat healthy, try some of this and it'll be sure to make you wealthy.</p>
-		<p>-Muellers</p>
-		<img src="images/pasta.jpeg">
-	</div>
-</div>
+<link rel="stylesheet" href="css/style1.css">
+
+<p>Feeling hungry but wanna eat healthy, try some of this and it'll be sure to make you wealthy.</p>
+<p>-Muellers</p>
+<img src="images/pasta.jpeg">
