--- a/views/index2.erb
+++ b/views/index2.erb
@@ -1,3 +1,6 @@
+<link rel="stylesheet" href="css/style2.css">
+
 <p>If you have a dog and need some food, we'll be sure to set the mood.</p>
 <p>-Puppy Cannon</p>
 <img src="images/puppy.jpeg">
+
