--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
 <link rel="stylesheet" href="css/bootstrap.min.css">
-<link rel="stylesheet" href="css/style1.css">
 <link rel="stylesheet" href="css/bootstrap.css">
+
   <head>
     <title>Index</title>
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
@@ -10,10 +10,14 @@
 
   <body>
   	<div class="container">
+      <div class="row">
+        <div class="col-md-2">
 
   		<%= yield %>
 
-  	</div>
+      </div>
+  	 </div>
+    </div>
 
     <script src="js/bootstrap.js"></script>
   </body>
