added the image for each file into a column of its own

--- a/views/index2.erb
+++ b/views/index2.erb
@@ -2,5 +2,11 @@
 
 <p>If you have a dog and need some food, we'll be sure to set the mood.</p>
 <p>-Puppy Cannon</p>
-<img src="images/puppy.jpeg">
 
+  	<div class="container">
+      <div class="row">
+        <div class="col-md-6">
+			<img src="images/puppy.jpeg">
+        </div>
+      </div>
+    </div>	
