--- a/views/index3.erb
+++ b/views/index3.erb
@@ -2,4 +2,11 @@
 
 <p>Kinda parched and in need of a drink, grab a bottle and it'll make you wink</p>
 <p>-Coca Cola</p>
-<img src="images/coke.jpeg">
+
+  	<div class="container">
+      <div class="row">
+        <div class="col-md-6">
+			<img src="images/coke.jpeg">
+        </div>
+      </div>
+    </div>	
