--- a/views/index1.erb
+++ b/views/index1.erb
@@ -2,4 +2,11 @@
 
 <p>Feeling hungry but wanna eat healthy, try some of this and it'll be sure to make you wealthy.</p>
 <p>-Muellers</p>
-<img src="images/pasta.jpeg">
+
+  	<div class="container">
+      <div class="row">
+        <div class="col-md-6">
+			<img src="images/pasta.jpeg">
+        </div>
+      </div>
+    </div>			
