--- a/views/index3.erb
+++ b/views/index3.erb
@@ -1,5 +1,7 @@
 <link rel="stylesheet" href="css/style3.css">
 
-<p>Kinda parched and in need of a drink, grab a bottle and it'll make you wink</p>
-<p>-Coca Cola</p>
-<img src="images/coke.jpeg">
+<ul>
+  <% [ 'American Shorthair', 'Abyssynian', 'Russian Blue' ].each do |cat| %>
+    <li class="cat <%= cat.downcase.gsub(' ','-') %>"><%= cat %></li>
+  <% end %>
+</ul>
